# boilerplate

./: .gitmodules  CMakeLists.txt  build_shaders.sh  readme.md
examples/demo/: main.cpp
inc/boilerplate/: glfw.hpp  imgui.hpp  program.hpp
inc/boilerplate/detail/: shader_helper.hpp
inc/boilerplate/detail/generated_shaders/: imgui.fs.essl.h  imgui.fs.glsl.h  imgui.fs.metal.h  imgui.fs.vulkan.h  imgui.vs.essl.h  imgui.vs.glsl.h  imgui.vs.metal.h  imgui.vs.vulkan.h
inc/boilerplate/platform/: emscripten.hpp  linux.hpp  platform.hpp
src/boilerplate/: glfw.cpp  imgui.cpp  program.cpp
src/boilerplate/platform/: emscripten.cpp  linux.cpp  platform.cpp
src/boilerplate/shaders/imgui/: build.sh  imgui.vs  varying.def.sc
